--- a/blog/composer.json
+++ b/blog/composer.json
@@ -5,21 +5,26 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
-        "graham-campbell/markdown": "^6.1",
-        "laravelcollective/html": "5.2",
+        "php": ">=7.1.3",
+        "laravel/framework": "5.7",
+        "laravel/tinker": "^1.0",
+        "fideloper/proxy": "^4.0",
+        "laravelcollective/html": "5.7",
         "intervention/image": "^2.3",
         "santigarcor/laratrust": "3.0.*",
-        "barryvdh/laravel-debugbar": "^2.3",
-        "ext-gd": "*"
+        "ext-gd": "*",
+        "graham-campbell/markdown": "^10.2"
+        
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "beyondcode/laravel-dump-server": "^1.0",
+        "filp/whoops": "^2.0",
+        "fzaninotto/faker": "^1.4",
+        "mockery/mockery": "^1.0",
+        "nunomaduro/collision": "^2.0",
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
